--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -11,6 +11,12 @@ build:
     - image: sso-resource-server
       jib:
         project: sso-resource-server
+    - image: discovery-service
+      jib:
+        project: discovery-service
+    - image: gateway-service
+      jib:
+        project: gateway-service
   tagPolicy:
     sha256: {}
 deploy:
@@ -30,3 +36,7 @@ profiles:
           context: sso-client-app-1
         - image: sso-resource-server
           context: sso-resource-server
+        - image: discovery-service
+          context: discovery-service
+        - image: gateway-service
+          context: gateway-service
