--- a/kubernetes-manifests/gateway-service/gateway-service.deployment.yaml
+++ b/kubernetes-manifests/gateway-service/gateway-service.deployment.yaml
@@ -1,26 +1,29 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: sso-client-app-1
+  name: gateway-service
   namespace: default
   labels:
-    app: sso-client-app-1
+    app: gateway-service
     tier: frontend
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: sso-client-app-1
+      app: gateway-service
       tier: frontend
   template:
     metadata:
       labels:
-        app: sso-client-app-1
+        app: gateway-service
         tier: frontend
     spec:
       containers:
-        - name: sso-client-app-1
-          image: sso-client-app-1
+        - name: gateway-service
+          image: gateway-service
           ports:
             - containerPort: 8080
               name: http-server
+          env:
+            - name: SSO-RESOURCE-SERVER_API_ADDR
+              value: http://sso-resource-server/api/foos/
