--- a/sso-authorization-server/src/main/resources/application.yml
+++ b/sso-authorization-server/src/main/resources/application.yml
@@ -18,6 +18,7 @@ spring:
     url: jdbc:h2:mem:testdb
 
 keycloak:
+  auth-server-url: http://sso-authorization-server/auth
   server:
     contextPath: /auth
     adminUser:
